force-app/main/default/objects/Portal_Section_Field_Setting__mdt/Portal_Section_Field_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Portal Section Field Setting</label>
    <pluralLabel>Portal Section Field Settings</pluralLabel>
</CustomObject>