force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Create_Staging_Record_Condition_Operator__c.field-meta.xml
<CustomField>
    <fullName>Create_Staging_Record_Condition_Operator__c</fullName>
    <description>If you wish to create a staging record if this field setting record has a specific value, then this operator tells us how we want to compare the field setting record value to the value specified on this custom metadata record.</description>
    <inlineHelpText>If you wish to create a staging record if this field setting record has a specific value, then this operator tells us how we want to compare the field setting record value to the value specified on this custom metadata record.</inlineHelpText>
    <label>Create Staging Record Condition Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>!=</fullName>
                <default>true</default>
                <label>!=</label>
            </value>
            <value>
                <fullName>==</fullName>
            </value>
            <value>
                <fullName>LIKE</fullName>
            </value>
            <value>
                <fullName>NOT LIKE</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
            <value>
                <fullName>INCLUDES</fullName>
            </value>
            <value>
                <fullName>EXCLUDES</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>