force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Create_Staging_Record_Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>Create_Staging_Record_Condition_Value__c</fullName>
    <description>If you wish to create a staging record if this field setting record has a specific value, then this value is the value we are going to compare the field setting record value against.</description>
    <inlineHelpText>If you wish to create a staging record if this field setting record has a specific value, then this value is the value we are going to compare the field setting record value against.</inlineHelpText>
    <label>Create Staging Record Condition Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>