force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>This is the sobject field api name that we wish to query.</description>
    <inlineHelpText>This is the sobject field api name that we wish to query.</inlineHelpText>
    <label>Field API Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>