force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Field_Order_For_Duplicate_Logic__c.field-meta.xml
<CustomField>
    <fullName>Field_Order_For_Duplicate_Logic__c</fullName>
    <description>On the parent custom metadata record, there is a string of boolean logic that will help us find duplicate records. The duplicate logic uses number aliases for the field names. This field identifies the number that we want to use as an alias for this field setting record.</description>
    <inlineHelpText>On the parent custom metadata record, there is a string of boolean logic that will help us find duplicate records. The duplicate logic uses number aliases for the field names. This field identifies the number that we want to use as an alias for this field setting record.</inlineHelpText>
    <label>Field Order For Duplicate Logic</label>
    <length>4</length>
    <type>Text</type>
</CustomField>