force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>The html input type for this field when we display it on the front end.</description>
    <inlineHelpText>The html input type for this field when we display it on the front end.</inlineHelpText>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
            <value>
                <fullName>checkbox</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
            <value>
                <fullName>datetime-local</fullName>
            </value>
            <value>
                <fullName>richtext</fullName>
            </value>
            <value>
                <fullName>textarea</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>