force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field__c</fullName>
    <description>If there are multiple records under the parent custom metadata section and we want to identify a specific record, this field tells us what sobject field api name we will use to find the record.</description>
    <inlineHelpText>If there are multiple records under the parent custom metadata section and we want to identify a specific record, this field tells us what sobject field api name we will use to find the record.</inlineHelpText>
    <label>Filter Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>