force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Filter_Operator__c.field-meta.xml
<CustomField>
    <fullName>Filter_Operator__c</fullName>
    <description>If there are multiple records under the parent custom metadata section and we want to identify a specific record, this field tells us how to evaluate each record against other criteria listed on this field setting record.</description>
    <inlineHelpText>If there are multiple records under the parent custom metadata section and we want to identify a specific record, this field tells us how to evaluate each record against other criteria listed on this field setting record.</inlineHelpText>
    <label>Filter Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>!=</fullName>
                <default>true</default>
                <label>!=</label>
            </value>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>LIKE</fullName>
            </value>
            <value>
                <fullName>NOT LIKE</fullName>
            </value>
            <value>
                <fullName>ISBLANK</fullName>
            </value>
            <value>
                <fullName>ISNOTBLANK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>