force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Filter_Value__c</fullName>
    <description>If there are multiple records under the parent custom metadata section and we want to identify a specific record, this field tells us what value we are looking for when we are trying to filter the records.</description>
    <inlineHelpText>If there are multiple records under the parent custom metadata section and we want to identify a specific record, this field tells us what value we are looking for when we are trying to filter the records.</inlineHelpText>
    <label>Filter Value</label>
    <length>25</length>
    <type>Text</type>
</CustomField>