force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Front_End_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Field_Id__c</fullName>
    <description>The unique id that will be used on the front end to display the correct data and can be used as the field name in apex if we want to wrap the class in a custom data structure.</description>
    <inlineHelpText>The unique id that will be used on the front end to display the correct data and can be used as the field name in apex if we want to wrap the class in a custom data structure.</inlineHelpText>
    <label>Front End Field Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>