force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Front_End_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Field_Label__c</fullName>
    <description>The label that will display above this field on the front end.</description>
    <inlineHelpText>The label that will display above this field on the front end.</inlineHelpText>
    <label>Front End Field Label</label>
    <length>90</length>
    <type>Text</type>
</CustomField>