force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Front_End_Field_Only__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Field_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, it means that there is no backend sobject field that corresponds to this field setting record, meaning this field only exists in the front end structure.</description>
    <inlineHelpText>If this is checked, it means that there is no backend sobject field that corresponds to this field setting record, meaning this field only exists in the front end structure.</inlineHelpText>
    <label>Front End Field Only</label>
    <type>Checkbox</type>
</CustomField>