force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Front_End_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Field_Value__c</fullName>
    <label>Front End Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>