force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Has_Report_Update_Link__c.field-meta.xml
<CustomField>
    <fullName>Has_Report_Update_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If certain sobject records cannot be edited on the front end, this checkbox tells us to call a special function that allows for the record to create a staging record for review.</description>
    <inlineHelpText>If certain sobject records cannot be edited on the front end, this checkbox tells us to call a special function that allows for the record to create a staging record for review.</inlineHelpText>
    <label>Has Report Update Link</label>
    <type>Checkbox</type>
</CustomField>