force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Has_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Has_Toggle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If there is a directory setting that is associated with this field, then this tells us to display an input field that will allow the user to change the directory setting.</description>
    <inlineHelpText>If there is a directory setting that is associated with this field, then this tells us to display an input field that will allow the to change the directory setting.</inlineHelpText>
    <label>Has Toggle</label>
    <type>Checkbox</type>
</CustomField>