force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Is_Create_Staging_Record_On_Field_Change__c.field-meta.xml
<CustomField>
    <fullName>Is_Create_Staging_Record_On_Field_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, then when we compare the old record value against the record value that was returned from a front end edit. If they are different, we will create a staging record instead of updating the old record.</description>
    <inlineHelpText>If this is checked, then when we compare the old record value against the record value that was returned from a front end edit. If they are different, we will create a staging record instead of updating the old record.</inlineHelpText>
    <label>Is Create Staging Record On Field Change</label>
    <type>Checkbox</type>
</CustomField>