force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Is_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, then the field cannot be edited on the front end.</description>
    <inlineHelpText>If this field is checked, then the field cannot be edited on the front end.</inlineHelpText>
    <label>Is Disabled</label>
    <type>Checkbox</type>
</CustomField>