force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Is_Display_On_Portal__c.field-meta.xml
<CustomField>
    <fullName>Is_Display_On_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, we will display the field on the front end portal page.</description>
    <inlineHelpText>If this field is checked, we will display the field on the front end portal page.</inlineHelpText>
    <label>Is Display On Portal</label>
    <type>Checkbox</type>
</CustomField>