force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Lookup_Filter_Clause__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Filter_Clause__c</fullName>
    <description>If this field setting record requires a lookup input on the front end, this field tells us how to filter the query.</description>
    <inlineHelpText>If this field setting record requires a lookup input on the front end, this field tells us how to filter the query.</inlineHelpText>
    <label>Lookup Filter Clause</label>
    <type>TextArea</type>
</CustomField>