force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Lookup_SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_SObject_Name__c</fullName>
    <description>If this field setting record requires a lookup input on the front end, this field tells us what sobject we are querying against.</description>
    <inlineHelpText>If this field setting record requires a lookup input on the front end, this field tells us what sobject we are querying against.</inlineHelpText>
    <label>Lookup SObject Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>