force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Section_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Section_Mapping__c</fullName>
    <description>The parent custom metadata record for this field. This field is a field on the sobject described by the parent record.</description>
    <inlineHelpText>The parent custom metadata record for this field. This field is a field on the sobject described by the parent record.</inlineHelpText>
    <label>Section Mapping</label>
    <referenceTo>Portal_Page_Section_Setting__mdt</referenceTo>
    <relationshipLabel>Portal Section Field Settings</relationshipLabel>
    <relationshipName>Portal_Section_Field_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>