force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Staging_Field_Population_Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>Staging_Field_Population_Condition_Value__c</fullName>
    <description>If the staging field is only populated under certain conditions, this field tells us the value that the sobject field must be in order to populate the staging field.</description>
    <inlineHelpText>If the staging field is only populated under certain conditions, this field tells us the value that the sobject field must be in order to populate the staging field.</inlineHelpText>
    <label>Staging Field Population Condition Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>