force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Staging_Record_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Staging_Record_Field_API_Name__c</fullName>
    <description>The field api name for the staging sobject record that we will populate if we need to create a staging record.</description>
    <inlineHelpText>The field api name for the staging sobject record that we will populate if we need to create a staging record.</inlineHelpText>
    <label>Staging Record Field API Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>