force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Static_Available_Values__c.field-meta.xml
<CustomField>
    <fullName>Static_Available_Values__c</fullName>
    <label>Static Available Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>