force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Static_Value_For_Staging_Field__c.field-meta.xml
<CustomField>
    <fullName>Static_Value_For_Staging_Field__c</fullName>
    <description>The hard coded value to populate the staging field with.</description>
    <inlineHelpText>The hard coded value to populate the staging field with.</inlineHelpText>
    <label>Static Value For Staging Field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>