force-app/main/default/objects/Portal_Section_Field_Setting__mdt/fields/Tooltip_Text__c.field-meta.xml
<CustomField>
    <fullName>Tooltip_Text__c</fullName>
    <label>Tooltip Text</label>
    <type>TextArea</type>
</CustomField>