force-app/main/default/objects/Portal_Section_Field_Setting__mdt/listViews/Phone_Fields.listView-meta.xml
<ListView>
    <fullName>Phone_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Front_End_Field_Label__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Is_Display_On_Portal__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Field_Order_For_Duplicate_Logic__c</columns>
    <columns>Staging_Record_Field_API_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Section_Mapping__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Section_Mapping__c</field>
        <operation>startsWith</operation>
        <value>Phone</value>
    </filters>
    <label>Phone Fields</label>
    <language>en_US</language>
</ListView>