force-app/main/default/objects/Portal_Section_Field_Setting__mdt/listViews/xEvent_Fields.listView-meta.xml
<ListView>
    <fullName>xEvent_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Front_End_Field_Label__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Is_Display_On_Portal__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Section_Mapping__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Section_Mapping__c</field>
        <operation>contains</operation>
        <value>Event</value>
    </filters>
    <label>xEvent Fields</label>
    <language>en_US</language>
</ListView>